--- a/app/src/main/res/layout/activity_penaltys.xml
+++ b/app/src/main/res/layout/activity_penaltys.xml
@@ -10,7 +10,7 @@
     android:id="@+id/layout_Mayor"
     android:weightSum="1"
     android:orientation="vertical"
-    android:background="@drawable/arbitro_penal">
+    android:background="@drawable/penaltysignal">
 
 
     <LinearLayout
