--- a/app/src/main/res/layout/activity_penaltys.xml
+++ b/app/src/main/res/layout/activity_penaltys.xml
@@ -10,7 +10,7 @@
     android:id="@+id/layout_Mayor"
     android:weightSum="1"
     android:orientation="vertical"
-    android:background="@drawable/penaltysignal">
+    android:background="@drawable/zz">
 
 
     <LinearLayout
@@ -31,7 +31,7 @@
             android:showDividers="beginning"
             android:touchscreenBlocksFocus="true"
             android:checkedButton="@android:integer/config_shortAnimTime"
-            android:layout_weight="0.40"
+            android:layout_weight="0.55"
             android:gravity="fill_vertical">
 
             <RadioButton
@@ -39,26 +39,27 @@
                 android:layout_height="wrap_content"
                 android:text="Carga sin Pelota"
                 android:id="@+id/rbCargaSinPelota"
-                android:textColor="#ff710408"
+                android:textColor="#ff0f2013"
                 android:textColorHighlight="#ff4c3dff"
                 android:visibility="visible"
                 android:textColorLink="#ff2928ff"
                 android:importantForAccessibility="yes"
                 android:focusable="true"
-                android:checked="@bool/abc_action_bar_embed_tabs"
+                android:checked="false"
                 android:textStyle="normal|bold|italic"
                 android:textSize="@dimen/abc_text_size_medium_material"
                 android:gravity="top|left|bottom|fill_vertical|start|end|center_horizontal"
                 android:hint="@string/abc_searchview_description_search"
                 android:labelFor="@integer/abc_max_action_buttons"
-                android:lines="@android:integer/status_bar_notification_info_maxnum" />
+                android:lines="@android:integer/status_bar_notification_info_maxnum"
+                android:textColorHint="#ff0d0a0c" />
 
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Derrumbe de Maul"
                 android:id="@+id/brDerrumbe"
-                android:textColor="#ff710408"
+                android:textColor="#ff0f2013"
                 android:textColorHighlight="#ff4c3dff"
                 android:visibility="visible"
                 android:textColorLink="#ff2928ff"
@@ -70,14 +71,15 @@
                 android:gravity="top|left|bottom|fill_vertical|start|end|center_horizontal"
                 android:hint="@string/abc_searchview_description_search"
                 android:labelFor="@integer/abc_max_action_buttons"
-                android:lines="@android:integer/status_bar_notification_info_maxnum" />
+                android:lines="@android:integer/status_bar_notification_info_maxnum"
+                android:textColorHint="#ff0d0a0c" />
 
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Entrada por el costado "
                 android:id="@+id/rbEntradaDeCostado"
-                android:textColor="#ff710408"
+                android:textColor="#ff0f2013"
                 android:textColorHighlight="#ff4c3dff"
                 android:visibility="visible"
                 android:textColorLink="#ff2928ff"
@@ -89,14 +91,15 @@
                 android:gravity="top|left|bottom|fill_vertical|start|end|center_horizontal"
                 android:hint="@string/abc_searchview_description_search"
                 android:labelFor="@integer/abc_max_action_buttons"
-                android:lines="@android:integer/status_bar_notification_info_maxnum" />
+                android:lines="@android:integer/status_bar_notification_info_maxnum"
+                android:textColorHint="#ff0d0a0c" />
 
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Inconducta"
                 android:id="@+id/rbInconducta"
-                android:textColor="#ff710408"
+                android:textColor="#ff0f2013"
                 android:textColorHighlight="#ff4c3dff"
                 android:visibility="visible"
                 android:textColorLink="#ff2928ff"
@@ -108,14 +111,15 @@
                 android:gravity="top|left|bottom|fill_vertical|start|end|center_horizontal"
                 android:hint="@string/abc_searchview_description_search"
                 android:labelFor="@integer/abc_max_action_buttons"
-                android:lines="@android:integer/status_bar_notification_info_maxnum" />
+                android:lines="@android:integer/status_bar_notification_info_maxnum"
+                android:textColorHint="#ff0d0a0c" />
 
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Carga indebida en Line"
                 android:id="@+id/rbLine"
-                android:textColor="#ff710408"
+                android:textColor="#ff0f2013"
                 android:textColorHighlight="#ff4c3dff"
                 android:visibility="visible"
                 android:textColorLink="#ff2928ff"
@@ -127,14 +131,15 @@
                 android:gravity="top|left|bottom|fill_vertical|start|end|center_horizontal"
                 android:hint="@string/abc_searchview_description_search"
                 android:labelFor="@integer/abc_max_action_buttons"
-                android:lines="@android:integer/status_bar_notification_info_maxnum" />
+                android:lines="@android:integer/status_bar_notification_info_maxnum"
+                android:textColorHint="#ff0d0a0c" />
 
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Manos en el ruck"
                 android:id="@+id/rbManos"
-                android:textColor="#ff710408"
+                android:textColor="#ff0f2013"
                 android:textColorHighlight="#ff4c3dff"
                 android:visibility="visible"
                 android:textColorLink="#ff2928ff"
@@ -146,14 +151,15 @@
                 android:gravity="top|left|bottom|fill_vertical|start|end|center_horizontal"
                 android:hint="@string/abc_searchview_description_search"
                 android:labelFor="@integer/abc_max_action_buttons"
-                android:lines="@android:integer/status_bar_notification_info_maxnum" />
+                android:lines="@android:integer/status_bar_notification_info_maxnum"
+                android:textColorHint="#ff0d0a0c" />
 
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Off Side"
                 android:id="@+id/rbOffSide"
-                android:textColor="#ff710408"
+                android:textColor="#ff0f2013"
                 android:textColorHighlight="#ff4c3dff"
                 android:visibility="visible"
                 android:textColorLink="#ff2928ff"
@@ -165,14 +171,15 @@
                 android:gravity="top|left|bottom|fill_vertical|start|end|center_horizontal"
                 android:hint="@string/abc_searchview_description_search"
                 android:labelFor="@integer/abc_max_action_buttons"
-                android:lines="@android:integer/status_bar_notification_info_maxnum" />
+                android:lines="@android:integer/status_bar_notification_info_maxnum"
+                android:textColorHint="#ff0d0a0c" />
 
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Scrum"
                 android:id="@+id/rbScrum"
-                android:textColor="#ff710408"
+                android:textColor="#ff0f2013"
                 android:textColorHighlight="#ff4c3dff"
                 android:visibility="visible"
                 android:textColorLink="#ff2928ff"
@@ -184,14 +191,15 @@
                 android:gravity="top|left|bottom|fill_vertical|start|end|center_horizontal"
                 android:hint="@string/abc_searchview_description_search"
                 android:labelFor="@integer/abc_max_action_buttons"
-                android:lines="@android:integer/status_bar_notification_info_maxnum" />
+                android:lines="@android:integer/status_bar_notification_info_maxnum"
+                android:textColorHint="#ff0d0a0c" />
 
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Tackle Alto"
                 android:id="@+id/rbTackleAlto"
-                android:textColor="#ff710408"
+                android:textColor="#ff0f2013"
                 android:textColorHighlight="#ff4c3dff"
                 android:visibility="visible"
                 android:textColorLink="#ff2928ff"
@@ -203,14 +211,15 @@
                 android:gravity="top|left|bottom|fill_vertical|start|end|center_horizontal"
                 android:hint="@string/abc_searchview_description_search"
                 android:labelFor="@integer/abc_max_action_buttons"
-                android:lines="@android:integer/status_bar_notification_info_maxnum" />
+                android:lines="@android:integer/status_bar_notification_info_maxnum"
+                android:textColorHint="#ff0d0a0c" />
 
             <RadioButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Retención"
                 android:id="@+id/rbRetener"
-                android:textColor="#ff710408"
+                android:textColor="#ff0f2013"
                 android:textColorHighlight="#ff4c3dff"
                 android:visibility="visible"
                 android:textColorLink="#ff2928ff"
@@ -222,14 +231,15 @@
                 android:gravity="top|left|bottom|fill_vertical|start|end|center_horizontal"
                 android:hint="@string/abc_searchview_description_search"
                 android:labelFor="@integer/abc_max_action_buttons"
-                android:lines="@android:integer/status_bar_notification_info_maxnum" />
+                android:lines="@android:integer/status_bar_notification_info_maxnum"
+                android:textColorHint="#ff0d0a0c" />
 
             <RadioButton
                 android:layout_width="325dp"
                 android:layout_height="wrap_content"
                 android:text="Tirarse en el Ruck"
                 android:id="@+id/rbTirarseEnElRuck"
-                android:textColor="#ff710408"
+                android:textColor="#ff0f2013"
                 android:textColorHighlight="#ff4c3dff"
                 android:visibility="visible"
                 android:textColorLink="#ff2928ff"
@@ -241,7 +251,8 @@
                 android:gravity="top|left|bottom|fill_vertical|start|end|center_horizontal"
                 android:hint="@string/abc_searchview_description_search"
                 android:labelFor="@integer/abc_max_action_buttons"
-                android:lines="@android:integer/status_bar_notification_info_maxnum" />
+                android:lines="@android:integer/status_bar_notification_info_maxnum"
+                android:textColorHint="#ff0d0a0c" />
 
             <RadioButton
                 android:layout_width="216dp"
@@ -250,7 +261,7 @@
                 android:id="@+id/rbTacleadorNoLibera"
                 android:checked="false"
                 android:textSize="@dimen/abc_text_size_medium_material"
-                android:textColor="#ff710408"
+                android:textColor="#ff0f2013"
                 android:textColorHighlight="#ff4c3dff"
                 android:textColorLink="#ff2928ff"
                 android:textStyle="normal|bold|italic"
@@ -259,7 +270,8 @@
                 android:gravity="top|left|bottom|fill_vertical|start|end|center_horizontal"
                 android:hint="@string/abc_searchview_description_search"
                 android:labelFor="@integer/abc_max_action_buttons"
-                android:lines="@android:integer/status_bar_notification_info_maxnum" />
+                android:lines="@android:integer/status_bar_notification_info_maxnum"
+                android:textColorHint="#ff0d0a0c" />
 
         </RadioGroup>
 
