--- a/app/src/main/res/layout/activity_sumar_puntos.xml
+++ b/app/src/main/res/layout/activity_sumar_puntos.xml
@@ -102,30 +102,10 @@
             android:weightSum="1"
             android:layout_weight="0.20">
 
-            <Button
-                style="?android:attr/buttonStyleSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/sumarLocal"
-                android:id="@+id/btSumarLocalPtos"
-                android:layout_gravity="center_vertical"
-                android:background="#ff2622ff"
-                android:textColor="#ffffffff" />
-
             <FrameLayout
                 android:layout_width="94dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center_vertical"></FrameLayout>
-
-            <Button
-                style="?android:attr/buttonStyleSmall"
-                android:layout_width="115dp"
-                android:layout_height="wrap_content"
-                android:text="@string/sumaVisitante"
-                android:id="@+id/btSumarVisitantePtos"
-                android:layout_gravity="center_vertical"
-                android:background="#ffff7614"
-                android:textColor="#ffffffff" />
 
             <FrameLayout
                 android:layout_width="match_parent"
@@ -136,29 +116,77 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="115dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0.20"
-        android:weightSum="1"
-        android:layout_alignParentStart="true"
+        android:text="@string/sumaVisitante"
+        android:id="@+id/btSumarVisitantePtos"
+        android:layout_gravity="center_vertical"
+        android:background="#ffff7614"
+        android:textColor="#ffffffff"
         android:layout_below="@+id/linearLayout2"
-        android:id="@+id/linearLayout4">
+        android:layout_alignEnd="@+id/txTotalPtosVisitante" />
 
-        <TextView
-            android:layout_width="60dp"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:id="@+id/txTotalPtosLocal"
-            android:layout_weight="1.25" />
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="63dp"
+        android:text="@string/sumarLocal"
+        android:id="@+id/btSumarLocalPtos"
+        android:layout_gravity="center_vertical"
+        android:background="#ff2622ff"
+        android:textColor="#ffffffff"
+        android:layout_alignTop="@+id/btSumarVisitantePtos"
+        android:layout_alignParentStart="true"
+        android:layout_alignBottom="@+id/btSumarVisitantePtos" />
 
-        <TextView
-            android:layout_width="127dp"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:id="@+id/txTotalPtosVisitante"
-            android:layout_gravity="right" />
+    <TextView
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:id="@+id/txTotalPtosLocal"
+        android:layout_weight="0.86"
+        android:layout_marginTop="60dp"
+        android:text="0"
+        android:gravity="right"
+        android:layout_below="@+id/btSumarLocalPtos"
+        android:layout_toEndOf="@+id/textView11" />
 
-    </LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="LOCAL"
+        android:id="@+id/textView11"
+        android:layout_alignTop="@+id/txTotalPtosLocal"
+        android:layout_toStartOf="@+id/textView2" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="-"
+        android:id="@+id/textView12"
+        android:layout_alignBottom="@+id/txTotalPtosLocal"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="127dp"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:id="@+id/txTotalPtosVisitante"
+        android:layout_gravity="right"
+        android:text="0"
+        android:layout_marginStart="13dp"
+        android:layout_alignTop="@+id/textView13"
+        android:layout_toEndOf="@+id/textView12" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="VISITANTE"
+        android:id="@+id/textView13"
+        android:layout_alignTop="@+id/textView12"
+        android:layout_alignEnd="@+id/btSumarVisitantePtos" />
 
 </RelativeLayout>
